tests/ui/parser/issues/issue-64732.stderr
error: character literal may only contain one codepoint
  --> $DIR/issue-64732.rs:3:16
   |
LL |     let _foo = b'hello\0';
   |                ^^^^^^^^^^
   |
help: if you meant to write a byte string literal, use double quotes
   |
LL -     let _foo = b'hello\0';
LL +     let _foo = b"hello\0";
   |

error: character literal may only contain one codepoint
  --> $DIR/issue-64732.rs:6:16
   |
LL |     let _bar = 'hello';
   |                ^^^^^^^
   |
help: if you meant to write a string literal, use double quotes
   |
LL -     let _bar = 'hello';
LL +     let _bar = "hello";
   |

error: aborting due to 2 previous errors

